# libpthread-stubs

./: .gitignore  Makefile.am  autogen.sh  configure.ac  list.m4  stubs.c  stubs.c.m4
debian/: changelog  control  copyright.debian  rules  watch
